# tl_assistant

./: .clang-format  CMakeLists.txt  README  application.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  package.cmd  qtquickcontrols2.conf  resources.qrc  shortcut.cmd  version.rc.in
config/: app_config.cpp  app_config.h  default_config.yaml  tl_yaml_config.cpp  tl_yaml_config.h
tl_models/: sam_apis.h  sam_assist_annotation.h  sam_session.cpp  sam_session.h
tl_models/base/: blob.cpp  blob.h  format_cv.h  format_qt.h  model.cpp  model.h  ort_logging.cpp  ort_logging.h  ort_utils.cpp  sam_base.h  tokenizer.cpp  tokenizer.h  types.cpp
tl_models/efficientsam/: tl_efficient_sam.cpp
tl_models/sam1/: tl_sam1.cpp  tl_sam1.h
tl_models/sam2/: tl_sam2.cpp  tl_sam2.h
tl_models/sam3/: tl_sam3.cpp  tl_sam3.h
tl_models/yoloworld/: tl_yolo_world.cpp  tl_yolo_world.h
tl_modules/: ai_assist_annotation.cpp  ai_assist_annotation.h  ai_assist_annotation.ui  ai_assist_thread.cpp  ai_assist_thread.h  ai_prompt_annotation.cpp  ai_prompt_annotation.h  ai_prompt_annotation.ui  ai_text_to_annotation.cpp  ai_text_to_annotation.h  bbox_from_text.cpp  bbox_from_text.h  info_button.cpp  info_button.h  info_button.ui  polygon_from_mask.cpp  polygon_from_mask.h  sam_apis.cpp  sam_apis.h  sam_assist_annotation.cpp  sam_assist_annotation.ui  sam_prompt_annotation.cpp  sam_prompt_annotation.h  sam_prompt_annotation.ui  sam_session.cpp  sam_session.h
tl_modules/base/: blob.cpp  blob.h  format_cv.h  format_qt.h  model.cpp  model.h  ort_logging.h  ort_utils.h  sam_base.cpp  sam_base.h  tokenizer.h  types.h
tl_modules/efficientsam/: tl_efficient_sam.cpp  tl_efficient_sam.h
tl_modules/sam1/: tl_sam1.cpp  tl_sam1.h
tl_modules/sam2/: tl_sam2.cpp  tl_sam2.h
tl_modules/sam3/: tl_sam3.cpp  tl_sam3.h
tl_modules/yoloworld/: tl_yolo_world.h
tl_widgets/: base64.h  image_enhance.cpp  image_enhance.h  np_utils.h  numpy_utils.h  shape_to_json.cpp  shape_to_json.h  status_stats.cpp  status_stats.h  tl_brightness.cpp  tl_brightness.h  tl_canvas.cpp  tl_canvas.h  tl_chart_view.cpp  tl_chart_view.h  tl_file_dialog.cpp  tl_file_dialog.h  tl_file_watcher.cpp  tl_file_watcher.h  tl_files_list.cpp  tl_files_list.h  tl_label_dialog.cpp  tl_label_dialog.h  tl_label_file.cpp  tl_label_file.h  tl_label_list.cpp  tl_label_list.h  tl_shape.cpp  tl_shape.h  tl_shape_list.cpp  tl_shape_list.h  tl_tool_bar.cpp  tl_tool_bar.h  tl_train_widget.cpp  tl_train_widget.h  tl_train_widget.ui  tl_utils.cpp  tl_utils.h  tl_zoom_widget.cpp  tl_zoom_widget.h  (+3 more)
translate/: en_US.ts  tl_assistant_en_US.ts  tl_assistant_zh_CN.ts  zh_CN.ts
